--- a/src/App.css
+++ b/src/App.css
@@ -300,7 +300,7 @@ table a{
   height: 45vh;
 }
 .popup_left{
-  background-color:red;
+  background-color:#FFEAE9;
   height: 100%;
   width: 40%;
   color: #ffffff;
