--- a/src/App.css
+++ b/src/App.css
@@ -391,3 +391,126 @@ table a{
   align-items: center;
   justify-content: space-between;
 }
+#tabletwos{
+  display: none;
+}
+@media screen and (max-width: 700px) {
+  #table{
+    display: none;
+  }
+  #tabletwos{
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    width:96vw;
+    border: 1px solid #CCCCCC;
+    border-collapse: collapse;
+  }
+  .main {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    border: none;
+  }
+  table{
+    width: 80vw;
+    border-collapse: collapse;
+  }
+  th,td{
+    width: 15vw;
+  }
+  .lastcolumn{
+    width: 20vw;
+  }
+  .table_head{
+    width: 100vw;
+  }
+  .maintwo{
+    width: 100%;
+    width: 100vw;
+ 
+  }
+  .mainone{
+    width:100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    border: none;
+    height: 10vh;
+  }
+  .homeinput{
+    width: 13vw;
+  }
+  .excelbtn{
+    width: 10vw;
+    background-color:  #780807;
+    outline: none;
+    border: none;
+    margin-right:1vw;
+    height: 5vh;
+    color: #FFFFFF;
+    border-radius: 3px;
+    padding: 1vh 1vw;
+    box-sizing: border-box;
+    margin-top: 6vh;
+    font-size: 13px;
+    display: flex;
+    width: 35vw;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  .homeinputbtn{
+    width: 13vw;
+    background-color:  #780807;
+    outline: none;
+    border: none;
+    margin-right:1vw;
+    height: 4vh;
+    color: #FFFFFF;
+    border-radius: 3px;
+    padding: 1vh 1vw;
+    box-sizing: border-box;
+    text-align: center;
+  }
+  .mainone h2{
+    width: 30vw;
+  }
+  .formfield{
+    flex-direction: column;
+    margin: 0vh 0vw;
+  }
+  .addinput{
+    width: 80vw;
+  }
+  .formfieldradio{
+    flex-direction: column;
+    margin: 0vh 0vw;
+    justify-content: center;
+    align-items: center;
+  }
+  .radiobtns{
+    margin: 0vw;
+    display: none;
+  }
+  .addinputbtn{
+    width: 80vw;
+    margin-left: 0vw;
+    position: fixed;
+    top: 77%;
+    left: 9%;
+  }
+  .navbar_right{
+    width: 25vw;
+    margin-right: 15vw;
+  }
+  .imagesmall{
+    width: 8vw;
+    height: 8vw;
+    border: 1px solid #FFFFFF;
+    border-radius: 50%;
+  }
+  .navbar_right p{
+    width: 2vw;
+    margin-left: 1vw;
+  }
+}
